# ESP32_WLC-ID

./: .gitignore  README.md
doc/: cmd_design.md  espnow_design.md  ir_protocol_design.md  todo.md  wireless_charging_design.md
main/: CMakeLists.txt  app_main.c
main/app/: app_biz.c  app_cmd.c  app_cmd_handlers.c  app_cmd_test.c  app_devtest.c  app_espnow.c  app_espnow_device.c  app_ir.c  app_ir_master.c  app_ir_slave.c  app_status.c  app_system.c  app_twai.c  app_uart0.c  app_webui.c  app_ws2812_status.c
main/app/include/: app_biz.h  app_cmd.h  app_cmd_handlers.h  app_cmd_test.h  app_devtest.h  app_espnow.h  app_espnow_device.h  app_ir.h  app_ir_master.h  app_ir_slave.h  app_status.h  app_system.h  app_twai.h  app_uart0.h  app_webui.h  app_ws2812_status.h  ir_proto_common.h
main/bsp/: bsp_display.c  bsp_espnow.c  bsp_i2c.c  bsp_ir_carrier.c  bsp_ir_hw.c  bsp_ir_uart.c  bsp_key.c  bsp_twai.c  bsp_uart0.c  bsp_ws2812.c
main/bsp/include/: bsp_common.h  bsp_display.h  bsp_espnow.h  bsp_i2c.h  bsp_ir_carrier.h  bsp_ir_hw.h  bsp_ir_uart.h  bsp_key.h  bsp_twai.h  bsp_uart0.h  bsp_ws2812.h
main/include/: project_config.h
main/pinmux/: pinmux_board.c  pinmux_i2c.c  pinmux_ir.c  pinmux_key.c  pinmux_twai.c  pinmux_uart.c  pinmux_ws2812.c
main/pinmux/include/: pinmux_board.h  pinmux_i2c.h  pinmux_ir.h  pinmux_key.h  pinmux_twai.h  pinmux_uart.h  pinmux_ws2812.h
