idf_component_register(
    SRCS
        "app_main.c"
        "pinmux/pinmux_board.c"
        "pinmux/pinmux_twai.c"
        "pinmux/pinmux_uart.c"
        "pinmux/pinmux_i2c.c"
        "pinmux/pinmux_ws2812.c"
        "pinmux/pinmux_ir.c"
        "pinmux/pinmux_key.c"
        "bsp/bsp_twai.c"
        "bsp/bsp_uart0.c"
        "bsp/bsp_ir_uart.c"
        "bsp/bsp_ir_carrier.c"
        "bsp/bsp_ir_hw.c"
        "bsp/bsp_i2c.c"
        "bsp/bsp_key.c"
        "bsp/bsp_display.c"
        "bsp/bsp_ws2812.c"
        "bsp/bsp_espnow.c"
        "bsp/led_strip_encoder.c"
        "app/app_system.c"
        "app/app_status.c"
        "app/app_ws2812_status.c"
        "app/app_twai.c"
        "app/app_uart0.c"
        "app/app_ir.c"
        "app/app_ir_master.c"
        "app/app_ir_slave.c"
        "app/app_espnow.c"
        "app/app_espnow_device.c"
        "app/app_devtest.c"
        "app/app_webui.c"
    INCLUDE_DIRS
        "."
        "include"
        "pinmux/include"
        "bsp/include"
        "app/include"
    REQUIRES
        driver
        esp_driver_rmt
        esp_event
        esp_http_server
        esp_netif
        esp_timer
        esp_wifi
        nvs_flash
)
